Fix forgot password page spacing bugs

--- a/src/components/container/container.scss
+++ b/src/components/container/container.scss
@@ -201,7 +201,7 @@ $container_background-top-bar: $color_background-500 !default;
         padding-bottom: 2rem;
 
         @include media('>=laptop') {
-            padding-top: 3.5rem;
+            padding-top: 3rem;
             padding-bottom: 5rem;
         }
     }
